--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ruke318/elasticsearch",
+    "name": "dengyihao/es",
     "description": "elasticsearch",
 	"keywords": ["elasticsearch", "ruke318","laravel","php"],
 	"homepage": "https://github.com/ruke318/elasticsearch",
